--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,11 +28,8 @@
 					{% if site.state %}
 					    {{ site.state }} 
 					{% endif %}
-					{% if site.zip_code %}
-					    {{ site.zip_code }}<br />
-					{% endif %}
-					{% if site.country %}
-					    {{ site.country }}
+					{% if site.zip_code %}{% if site.country %}
+					    {{ site.zip_code }}{{ site.country }}<br />
 					{% endif %}
 					</span>
 				</div>
